# rust-web-benchmarks

./: .gitignore  README.md  gen-readme.sh  run.sh
bench-bot/src/: main.rs  report.rs
benchmark/hello-world/actix-web-tokio/: Cargo.toml
benchmark/hello-world/actix-web-tokio/src/: main.rs
benchmark/hello-world/astra/: Cargo.toml
benchmark/hello-world/axum/: Cargo.toml
benchmark/hello-world/khttp/: Cargo.toml
benchmark/hello-world/khttp/src/: main.rs
benchmark/hello-world/may_minihttp/: Cargo.toml
benchmark/hello-world/may_minihttp/src/: main.rs
benchmark/hello-world/ntex/: Cargo.toml
benchmark/hello-world/ntex/src/: main.rs
benchmark/hello-world/poem/: Cargo.toml
benchmark/hello-world/poem/src/: main.rs
benchmark/hello-world/rocket/: Cargo.toml
benchmark/hello-world/rocket/src/: main.rs
benchmark/hello-world/salvo/: Cargo.toml
benchmark/hello-world/salvo/src/: main.rs
benchmark/hello-world/thruster/: Cargo.toml
benchmark/hello-world/viz/: Cargo.toml
benchmark/hello-world/viz/src/: main.rs
result/: hello-world-256.md  hello-world-512.md  hello-world-64.md
