[package]
name = "hello-world-khttp"
version = "0.1.0"
edition = "2021"

[dependencies]
khttp = { git = "https://github.com/karlivory/khttp.git", rev = "7a77dcb4e5ce319b534736bdbb60704a200cdfc4" }
# khttp = "0.1.5"

[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = true
debug = false
incremental = false
overflow-checks = false
