[package]
name = "hello-world-khttp"
version = "0.1.0"
edition = "2021"

[dependencies]
khttp = { git = "https://github.com/karlivory/khttp.git", rev = "3464051b1c842ce1176d4f346c682cadc14985e1" }

[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = true
debug = false
incremental = false
overflow-checks = false
